<resources>
    <string name="app_name">Tastie</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_tab_home">Home</string>
    <string name="title_tab_cart">Cart</string>
    <string name="title_tab_profile">Profile</string>
    <string name="desc_bg_category_title">Shape background for category title</string>
    <string name="text_category_title">Category</string>
    <string name="text_catalog_title">Popular</string>
    <string name="desc_bg_catalog_title">Shape background for catalog title</string>
    <string name="text_title_banner">Diskon 50%</string>
    <string name="text_desc_banner">Pesan makanan sekarang dan dapatkan diskon spesial 50%</string>
    <string name="text_name">Hai Rendi,</string>
    <string name="text_greetings">Mau makan apa hari ini?</string>
    <string name="desc_catalog_image">This is catalog image</string>
    <string name="desc_icon_list">this is icon list</string>
    <string name="desc_category_image">this is category image</string>
    <string name="desc_bg_name_header">shape background for name in header</string>
    <string name="desc_icon_cart">icon cart</string>
    <string name="desc_icon_profile">icon profile</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="menu_home">Home</string>
    <string name="menu_cart">Keranjang</string>
    <string name="menu_history">Riwayat</string>
    <string name="menu_profile">Profil</string>
    <string name="add_to_cart">Tambah ke Keranjang - %1$s </string>
    <string name="desc_iv_catalog_image">iv_catalog_image</string>
    <string name="desc_ib_add_item_count">Button add item count</string>
    <string name="desc_ib_sub_item_count">Button sub item count</string>
    <string name="desc_iv_location">iv location</string>
    <string name="text_tv_location">Lokasi</string>
    <string name="text_tv_detail_location">Jl.Coba-coba jalan aja Km.100 Kabupaten Ogan Ilir, Ujung dunia 12451</string>
    <string name="text_tv_count">1</string>
    <string name="text_cart_fragment">CART FRAGMENT</string>
    <string name="history_fragment">HISTORY FRAGMENT</string>
    <string name="text_profile_fragment">PROFILE FRAGMENT</string>
    <string name="btn_back">Button Back navigation</string>
    <string name="text_add_to_cart_success">Berhasil ditambahkan ke keranjang</string>
    <string name="add_to_cart_failed">Gagal menambahkan ke keranjang</string>
    <string name="loading">loading…</string>
    <string name="total_quantity">x%s</string>
    <string name="text_title_your_cart">Keranjang</string>
    <string name="text_total_price">Total Harga</string>
    <string name="text_checkout">Checkout</string>
    <string name="text_cart_is_empty">Keranjang Kosong</string>
    <string name="text_edit">Edit</string>
    <string name="text_save">Save</string>
    <string name="text_hint_notes">Notes</string>
    <string name="text_title_order_confirmation">Order Confirmation</string>
    <string name="text_delivery_method">Delivery Method</string>
    <string name="text_pick_up">Pick Up</string>
    <string name="text_delivery">Delivery</string>
    <string name="text_payment_method">Payment Method</string>
    <string name="text_cash">Cash</string>
    <string name="text_e_wallet">E-Wallet</string>
    <string name="shopping_summary">Shopping Summary</string>
    <string name="text_detail">Detail</string>
    <string name="text_keranjang">Keranjang</string>
    <string name="text_confirmation_order">Konfirmasi Pesanan</string>
    <string name="text_profile">Profile</string>
    <string name="text_username">Username</string>
    <string name="input_username">username12</string>
    <string name="text_input_email">Email</string>
    <string name="text_email">example@gmail.com</string>
    <string name="text_no_hp">Nomor Telepon</string>
    <string name="text_input_no_hp">08765678987</string>
    <string name="iv_menu_image">gfhhg</string>
    <string name="iv_catalog_image">testes</string>
    <string name="text_welcome">Welcome back !</string>
    <string name="text_name_header">Rendi Alamsyah</string>
    <string name="text_payment">Payment</string>
    <string name="text_deliveryp">Delivery</string>
    <string name="text_order_method">Order Method</string>
    <string name="error_checkout">Error Checkout</string>
    <string name="hint_name">Your name</string>
    <string name="hint_email">Email</string>
    <string name="hint_password">Password</string>
    <string name="hint_confirm_password">Confirm Password</string>
    <string name="text_log_in">Log in</string>
    <string name="text_not_registered_yet_register_here">Not registered yet ? Register Here</string>
    <string name="text_already_have_an_account_click_here">Already have an Account ? Login Here</string>
    <string name="text_error_email_empty">Email should not be empty</string>
    <string name="text_error_email_invalid">Enter a valid format email</string>
    <string name="text_error_password_empty">Password should not be empty</string>
    <string name="text_error_password_less_than_8_char">Password cannot less than 8 character</string>
    <string name="text_register">Register</string>
    <string name="text_password_does_not_match">Password doesn\'t match</string>
    <string name="text_error_name_cannot_empty">Name cannot be empty</string>
    <string name="text_highlight_login_here">Login Here</string>
    <string name="text_highlight_register">Register Here</string>
    <string name="text_change_profile">Change Profile</string>
    <string name="text_change_password">Change Password</string>
    <string name="text_logout">Logout</string>
    <string name="desc_iv_sub_item_count">icon_min</string>
    <string name="desc_iv_add_item_count">icon_add</string>
    <string name="desc_iv_logo_app">app_logo</string>
    <string name="desc_btn_edit">button_edit</string>
    <string name="desc_iv_profile_pict">Profile_pict</string>
    <string name="desc_iv_remove_cart">icon_remove_cart</string>
    <string name="desc_iv_minus">icon_min</string>
    <string name="desc_iv_plus">desc_iv_plus</string>
    <string name="desc_bg_banneer">bg_banner</string>
    <string name="desc_icon_banner">desc_icon_banner</string>
    <string name="success_order">Your order has been successfully created.</string>
    <string name="back">Back</string>
    <string name="order_success">Order Success</string>
</resources>