<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginHorizontal="8dp"
    android:layout_marginVertical="4dp"
    app:cardCornerRadius="16dp"
    app:cardElevation="2dp">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/iv_menu_image"
            android:layout_width="0dp"
            android:layout_height="100dp"
            android:contentDescription="@string/iv_menu_image"
            android:scaleType="centerCrop"
            app:layout_constraintDimensionRatio="1:1"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:src="@tools:sample/avatars" />

        <ImageView
            android:id="@+id/iv_remove_cart"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="4dp"
            android:src="@drawable/ic_remove"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:contentDescription="@string/desc_iv_remove_cart" />

        <TextView
            android:id="@+id/tv_menu_name"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="8dp"
            android:layout_marginTop="8dp"
            android:ellipsize="end"
            android:maxLines="2"
            android:textSize="16sp"
            android:textStyle="bold"
            app:layout_constraintStart_toEndOf="@+id/iv_menu_image"
            app:layout_constraintTop_toTopOf="parent"
            tools:text="Lorem Ipsum Dolor Sit Amet" />

        <TextView
            android:id="@+id/tv_menu_price"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="8dp"
            android:layout_marginVertical="4dp"
            app:layout_constraintStart_toEndOf="@id/iv_menu_image"
            app:layout_constraintTop_toBottomOf="@id/tv_menu_name"
            tools:text="Rp 50.000" />

        <LinearLayout
            android:id="@+id/ll_counter_product"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="4dp"
            android:layout_weight="1"
            android:background="@drawable/bg_button_rounded_border_transparent"
            android:orientation="horizontal"
            android:padding="4dp"
            android:weightSum="3"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/et_notes_item"
            app:layout_constraintTop_toTopOf="@id/et_notes_item">

            <ImageView
                android:id="@+id/iv_minus"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:src="@drawable/ic_minus"
                android:contentDescription="@string/desc_iv_minus" />

            <TextView
                android:id="@+id/tv_menu_count"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginHorizontal="8dp"
                android:layout_weight="1"
                android:textStyle="bold"
                tools:text="23" />

            <ImageView
                android:id="@+id/iv_plus"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:maxWidth="240dp"
                android:src="@drawable/ic_plus"
                android:contentDescription="@string/desc_iv_plus" />
        </LinearLayout>

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/et_notes_item"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="8dp"
            android:layout_marginVertical="4dp"
            android:hint="@string/text_hint_notes"
            android:imeOptions="actionDone"
            android:inputType="text"
            android:maxLines="3"
            android:textSize="12sp"
            app:layout_constraintEnd_toStartOf="@id/ll_counter_product"
            app:layout_constraintStart_toEndOf="@id/iv_menu_image"
            app:layout_constraintTop_toBottomOf="@id/tv_menu_price" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.cardview.widget.CardView>
